# itmo_fp

./: .gitignore  .gitmodules  README.md  _CoqProject  dune-project  largest_palindrome.ml  largest_palindrome.mli  util.ml
.github/workflows/: ci.yml
book-software-foundations/lf/: basics.v
data-structures/: Binary_tree.v  Int.v  Red_black_tree.v
lab-1-project-euler/: README.md
lab-2-data-structures/: BST_list_proof.v  Int.v  Red_black_tree.v  Red_black_tree_proof.v  Red_black_tree_proofs.v
lab-4-replicated-register/: README.md
lib/: Lib.v  dune  largest_palindrome.ml  largest_palindrome.mli  largest_prime_factor.ml  largest_prime_factor.mli  libcoq.ml  libcoq.mli  util.ml
project-euler/: Largest_palindrome.v  Largest_prime_factor.v  largest_palindrome.v  largest_palindrome_dec.v  largest_prime_factor.v
software-foundations/lf/: basics.v  induction.v
software-foundations/vol1/: basics.v
test/: dune  test_largest_palindrome.ml  test_largest_prime_factor.ml  test_rbtree.ml
theories/: BST_list_proof.v  Int.v  README.md  Red_black_tree.v  Red_black_tree_proof.v  Sorted.v
