(lang dune 3.16)

(name itmo_fp)

(generate_opam_files true)

(source
 (github hyperb0rean/itmo_fp))

(authors "hyperb0rean")

(maintainers "hyperb0rean")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name itmo_fp)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
